# perry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TASK.md  run_parity_tests.sh
.github/: dependabot.yml
benchmarks/: README.md  baseline.json  binary-size-baseline.json  compare.sh
crates/perry-ui-gtk4/: Cargo.toml
crates/perry-ui-gtk4/src/: app.rs  drag_drop.rs  lib.rs  media_playback.rs
crates/perry-ui-gtk4/src/ffi/: app_window.rs  clipboard_dialog_events.rs
crates/perry-ui-gtk4/src/widgets/: attributed_text.rs  bloomview.rs  bottom_nav.rs  image_gallery.rs  mod.rs  scrollview.rs  text.rs
crates/perry-ui-windows-winui/: Cargo.toml
crates/perry-ui-windows-winui/src/: lib.rs  winui.rs
docs/: audit-lazy-json.md  runtime-parity-gaps.md  runtime-parity.md  sso-migration-plan.md
examples/: issue_552_demo.ts
scripts/: addr_class_allowlist.txt  check_file_size.sh  check_runtime_symbols.sh  ci_test_scope.py  copied_minor_fallback_report.py  gc_store_site_allowlist.txt  gc_store_site_inventory.py  gen_parity_gaps.py  gen_parity_tests.py  parity-skiplist.toml  rank_jsruntime_fallbacks.sh  release_sweep.sh  release_sweep_lib.sh  run_issue_945_scalar_method_ir_guard.sh  run_jsruntime_promise_tests.sh  run_memory_stability_tests.sh  run_native_no_fallback_tests.sh  stage-npm.sh  test262_focused_report.py  test262_subset.py
test-features/: feature_matrix.md
test-files/: dynamic_import_barrel.ts  dynamic_import_cycle_a.ts  dynamic_import_cycle_b.ts  dynamic_import_helper_a.ts  dynamic_import_helper_b.ts  dynamic_import_init_cycle_target.ts  dynamic_import_inner.ts  dynamic_import_tla_helper.ts  issue_655_repro.ts  locale_es.ts  test_633_compose_synth.ts  test_633_min_box.ts  test_633_min_box2.ts  test_633_min_box3.ts  test_633_min_box4.ts  test_await_rejected_promise_handled.ts  test_better_sqlite3_raw.ts  test_constructor_property.ts  test_cross_module_no_ctor_fields.ts  test_date_fns_format.ts  test_decorators_legacy_metadata.ts  test_decorators_legacy_metadata_import.ts  test_decorators_legacy_methods.ts  test_decorators_legacy_module_args.ts  test_decorators_legacy_property_metadata.ts  test_decorators_metadata_inheritance.ts  test_decorators_nest_common_canary.ts  test_decorators_nest_integration_canary.ts  test_decorators_nest_js_common_canary.ts  test_express_mount.ts  (+184 more)
(+1522 files in other folders)
