[package]
name = "perry-ui-windows-winui"
version.workspace = true
edition.workspace = true

# Opt-in WinUI 3 (Fluent) Windows backend — issue #4680. Selected via
# `--target windows-winui`. This is the SCAFFOLD: the crate re-exports the
# Win32/GDI backend (`perry-ui-windows`) verbatim so the full `perry_ui_*`
# FFI ABI is satisfied and apps built for `windows-winui` link and run today
# (rendering through Win32). The WinUI/XAML widget mapping then lands
# incrementally in the `winui` module, replacing Win32 widget creation one
# widget at a time, without ever breaking the link surface.

[lib]
# Same shape as perry-ui-windows: an rlib for Rust consumers and a staticlib
# the perry driver /WHOLEARCHIVE's into the final executable. The staticlib
# bundles perry-ui-windows's object code (all its #[no_mangle] extern "C"
# symbols), so no symbol is lost by going through this crate.
crate-type = ["rlib", "staticlib"]

[dependencies]
# The entire current Windows backend. Re-exported wholesale (see src/lib.rs).
perry-ui-windows = { path = "../perry-ui-windows" }

# Future (XAML widget mapping, #4680 steps 1-6): driving WinAppSDK +
# Microsoft.UI.Xaml through the windows-rs WinRT projections. Intentionally
# NOT added yet — the WinAppSDK runtime + bootstrapper
# (Microsoft.WindowsAppRuntime.Bootstrap) is acquired out-of-band (NuGet /
# redistributable), not as a cargo dependency, so wiring it is its own step.
# When that lands, add:
#   windows = { version = "0.58", features = [
#       "UI_Xaml", "UI_Xaml_Controls", "UI_Xaml_Hosting", ... ] }
# and the bootstrap link to Microsoft.WindowsAppRuntime.Bootstrap.lib.

[features]
geisterhand = ["perry-ui-windows/geisterhand"]
